--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,10 @@
   "version": 2,
   "functions": {
     "api/analisar.js": {
-      "runtime": "nodejs18.x"
+      "runtime": "nodejs20.x"
     }
-  }
+  },
+  "routes": [
+    { "src": "/api/analisar", "dest": "/api/analisar.js" }
+  ]
 }
